# podcast-agent

./: README.md  habit_agent.py  pyproject.toml  qdrant_app.py  qdrant_app_no_logfire.py
.devcontainer/: devcontainer.json
1-ingest-data/: chunking.py  huberman-rss.json  rss-table.csv
2-tools/: 2-search-agent.ipynb  app.py  search_agent.py
ingestion/: README.md  chunking.py  embedding.py  ingestion.py  qdrant_upload.py
multi_agent/: orchest_agent.py  orchestrator.ipynb  orchestrator_run.py  streaming_parsing.py  websearch_agent.py  websearch_tools.py
single_agent/: messages.json  multipurpose_agent.py  multipurpose_app.py  parsing.py  websearch_tools.py
tests/: test_agent.py
tools/: qdrant_search.py  search_agent.py  search_tools.py
